--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,12 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "@google-cloud/kms": "^3.1.0",
+    "crypto": "^1.0.1",
+    "fast-crc32c": "^2.0.0",
+    "ethers": "^5.7.2",
+    "secp256k1": "^4.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
