--- a/functions/package.json
+++ b/functions/package.json
@@ -15,13 +15,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
     "@google-cloud/kms": "^3.1.0",
+    "asn1": "^0.2.6",
+    "asn1.js": "^5.4.1",
     "crypto": "^1.0.1",
-    "fast-crc32c": "^2.0.0",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.2",
-    "secp256k1": "^4.0.3"
+    "fast-crc32c": "^2.0.0",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
