--- a/functions/package.json
+++ b/functions/package.json
@@ -23,9 +23,14 @@
     "ethers": "^5.7.2",
     "fast-crc32c": "^2.0.0",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "node-fetch": "^2.6.7",
+    "node-html-parser": "^6.1.4",
+    "oauth": "^0.10.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.2",
+    "@types/oauth": "^0.9.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
