--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "secrets-sync": "firebase functions:config:unset doppler && firebase functions:config:set doppler=\"$(doppler secrets download --no-file)\"",
+    "deploy": "npm run secrets-sync && firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -23,7 +24,7 @@
     "ethers": "^5.7.2",
     "fast-crc32c": "^2.0.0",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
+    "firebase-functions": "^4.1.1",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^6.1.4",
     "oauth": "^0.10.0"
